linked css reset to pubs.html

--- a/WT/wesleypersonalsite/pages/pubs.html
+++ b/WT/wesleypersonalsite/pages/pubs.html
@@ -7,15 +7,15 @@
   <title>Wesley Tansey</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="../css/reset.css">
 <!--   <link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet"> -->
   <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
 
-    <div className="App">
-        <header className="App-header">
+    <div class="App">
+        <header class="App-header">
           <h1>Wesley Tansey</h1>
           <nav>
             <a href="../index.html" class="nav-link">Home</a>
