--- a/WT/wesleypersonalsite/index.html
+++ b/WT/wesleypersonalsite/index.html
@@ -14,8 +14,8 @@
 
 <body>
 
-    <div className="App">
-        <header className="App-header">
+    <div class="App">
+        <header class="App-header">
           <h1>Wesley Tansey</h1>
           <nav>
             <a href="#" class="nav-link">Home</a>
