removed paper&code dead links

--- a/WT/wesleypersonalsite/pages/pubs.html
+++ b/WT/wesleypersonalsite/pages/pubs.html
@@ -36,8 +36,8 @@
                 <span class='journal'>The 2020 Symposium on Data Science and Statistics (SDSS)</span>, June 2020.
               </p>
               <p>
-                <span> [<a href='#' target='_blank'>paper coming soon</a>]</span>
-                <span> [<a href='#' target='_blank'>code coming soon</a>]</span>
+                <span> [paper coming soon]</span>
+                <span> [code coming soon]</span>
               </p>
             </article>
           </div>
@@ -53,7 +53,7 @@
               </p>
               <p>
                 <span> [<a href='https://arxiv.org/abs/1911.09200' target='_blank'>paper</a>]</span>
-                <span> [<a href='#' target='_blank'>code coming soon</a>]</span>
+                <span> [code coming soon]</span>
               </p>
             </article>
             <article>
@@ -91,7 +91,7 @@
               </p>
               <p>
                 <span> [<a href='https://arxiv.org/abs/1812.05691' target='_blank'>paper</a>]</span>
-                <span> [<a href='#' target='_blank'>code coming soon</a>]</span>
+                <span> [code coming soon]</span>
               </p>
             </article>
             <article>
